Major Update. Support for sound [AudioManager class]. More demo Scenes. Added some more actor types. Enabled touch and accelerometer events. Added touch and accelerometer variables. Added image processing support. Added templates directory. Some more changes and documentation.

--- a/examples/demo/ha2d.html
+++ b/examples/demo/ha2d.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="../../src/core/class.js"></script>
 <script type="text/javascript" src="../../src/core/browserdetect.js"></script>
 
+<script type="text/javascript" src="../../src/model/audio.js"></script>
 <script type="text/javascript" src="../../src/model/actor.js"></script>
 <script type="text/javascript" src="../../src/model/extraActor.js"></script>
 <script type="text/javascript" src="../../src/model/conpoundimage.js"></script>
@@ -35,6 +36,11 @@
 
 <script type="text/javascript" src="../../src/behaviour/behaviour.js"></script>
 
+<script type="text/javascript" src="../../src/modules/CircleManager/PackedCircle.js"></script>
+<script type="text/javascript" src="../../src/modules/CircleManager/PackedCircleManager.js"></script>
+
+<script type="text/javascript" src="../../src/texture/plasma.js"></script>
+
 <script type="text/javascript" src="scene1.js"></script>
 <script type="text/javascript" src="scene2.js"></script>
 <script type="text/javascript" src="scene3.js"></script>
@@ -43,5 +49,10 @@
 <script type="text/javascript" src="scene6.js"></script>
 <script type="text/javascript" src="scene7.js"></script>
 <script type="text/javascript" src="scene8.js"></script>
+<script type="text/javascript" src="scene9.js"></script>
+<script type="text/javascript" src="scene10.js"></script>
+<script type="text/javascript" src="scene11.js"></script>
 
 <script type="text/javascript" src="main.js"></script>
+
+</html>
