Managed firefox bug on sound loop. Fixed some demo and tutorial code.

--- a/examples/demo/ha2d.html
+++ b/examples/demo/ha2d.html
@@ -36,6 +36,8 @@
 
 <script type="text/javascript" src="../../src/behaviour/behaviour.js"></script>
 
+<script type="text/javascript" src="../../src/modules/modules.js"></script>
+<script type="text/javascript" src="../../src/modules/LocalStorage/LocalStorage.js"></script>
 <script type="text/javascript" src="../../src/modules/CircleManager/PackedCircle.js"></script>
 <script type="text/javascript" src="../../src/modules/CircleManager/PackedCircleManager.js"></script>
 
