--- a/examples/tutorial/tut3.html
+++ b/examples/tutorial/tut3.html
@@ -1377,7 +1377,7 @@ function setScaleAnchored( scale_x, scale_y, anchor )</pre></div>
 
                         for( i=0; i<segments; i++ ) {
 
-                            var color= CAAT.ColorUtils.prototype.interpolate(
+                            var color= CAAT.Color.prototype.interpolate(
                                     255,255,0,
                                     255,128,0,
                                     segments,
