Major affine transformations update. Introduced Matrix4, optimized much rendering pipeline code, optimized model-view view-to-model matrices, etc. Major update due to webGL enabled system.

--- a/documentation/symbols/src/_Users_ibon_js_CAAT_src_behaviour_behaviour.js.html
+++ b/documentation/symbols/src/_Users_ibon_js_CAAT_src_behaviour_behaviour.js.html
@@ -587,7 +587,7 @@
 <span class='line'>580</span>      *
 <span class='line'>581</span>      */</span><span class="WHIT">
 <span class='line'>582</span> </span><span class="WHIT">	</span><span class="NAME">CAAT.ScaleBehavior</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="KEYW">function</span><span class="PUNC">(</span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
-<span class='line'>583</span> </span><span class="WHIT">		</span><span class="NAME">CAAT.RotateBehavior.superclass.constructor.call</span><span class="PUNC">(</span><span class="KEYW">this</span><span class="PUNC">)</span><span class="PUNC">;</span><span class="WHIT">
+<span class='line'>583</span> </span><span class="WHIT">		</span><span class="NAME">CAAT.ScaleBehavior.superclass.constructor.call</span><span class="PUNC">(</span><span class="KEYW">this</span><span class="PUNC">)</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'>584</span> </span><span class="WHIT">		</span><span class="NAME">this.anchor</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NAME">CAAT.Actor.prototype.ANCHOR_CENTER</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'>585</span> </span><span class="WHIT">		</span><span class="KEYW">return</span><span class="WHIT"> </span><span class="KEYW">this</span><span class="PUNC">;</span><span class="WHIT">		
 <span class='line'>586</span> 	</span><span class="PUNC">}</span><span class="PUNC">;</span><span class="WHIT">
