--- a/examples/games/bubbles/bubbles.html
+++ b/examples/games/bubbles/bubbles.html
@@ -16,16 +16,22 @@
     <script type="text/javascript" src="../../../src/model/director.js"></script>
     <script type="text/javascript" src="../../../src/model/mouseevent.js"></script>
     <script type="text/javascript" src="../../../src/model/scene.js"></script>
+    <script type="text/javascript" src="../../../src/model/audio.js"></script>
 
     <script type="text/javascript" src="../../../src/math/affinetransform2D.js"></script>
     <script type="text/javascript" src="../../../src/math/point.js"></script>
     <script type="text/javascript" src="../../../src/math/rectangle.js"></script>
     <script type="text/javascript" src="../../../src/math/bezier.js"></script>
+    <script type="text/javascript" src="../../../src/math/color.js"></script>
 
     <script type="text/javascript" src="../../../src/path/path.js"></script>
     <script type="text/javascript" src="../../../src/path/pathactor.js"></script>
     <script type="text/javascript" src="../../../src/path/interpolator.js"></script>
     <script type="text/javascript" src="../../../src/path/interpolatoractor.js"></script>
+
+    <script type="text/javascript" src="../../../src/modules/modules.js"></script>
+    <script type="text/javascript" src="../../../src/modules/LocalStorage/LocalStorage.js"></script>
+
 
     <script type="text/javascript" src="../../../src/behaviour/behaviour.js"></script>
 
