--- a/examples/demo/ha2d.html
+++ b/examples/demo/ha2d.html
@@ -7,6 +7,7 @@
 
 
 <body style="color:black; background:#ffffff;">
+<div id="container"></div>
 </body>
 
 <script type="text/javascript" src="../../src/CAAT.js"></script>
@@ -54,7 +55,39 @@
 <script type="text/javascript" src="scene9.js"></script>
 <script type="text/javascript" src="scene10.js"></script>
 <script type="text/javascript" src="scene11.js"></script>
+<script type="text/javascript" src="sceneCSS-experimental.js"></script>
+
+
+
+<script type="text/javascript" src="../../src/webgl/ShaderUtil.js"></script>
+<script type="text/javascript" src="../../src/webgl/glu.js"></script>
+
+
 
 <script type="text/javascript" src="main.js"></script>
+
+
+
+
+
+
+
+
+
+<script type="text/javascript" src="../../src/lib/stats.js"></script>
+
+<script type="text/javascript">
+(function() {
+    var stats = new Stats();
+	stats.domElement.style.position = 'absolute';
+	stats.domElement.style.left = '0px';
+	stats.domElement.style.top = '0px';
+	document.getElementById('container').appendChild(stats.domElement);
+    setInterval( function () {
+        stats.update();
+    }, 1000 / 60 );
+
+})();
+</script>
 
 </html>
