--- a/examples/tutorial/tut4.html
+++ b/examples/tutorial/tut4.html
@@ -229,7 +229,7 @@
 
                         new CAAT.Interpolator().createExponentialInInterpolator(    2, true),
                         new CAAT.Interpolator().createExponentialOutInterpolator(   2, true),
-                        new CAAT.Interpolator().createExponentialInOutInterpolator( 2, true),
+                        new CAAT.Interpolator().createExponentialInOutInterpolator( 2, true)
                     ],
                     [
                         new CAAT.Interpolator().createExponentialInInterpolator(    4, false),
@@ -238,7 +238,7 @@
 
                         new CAAT.Interpolator().createExponentialInInterpolator(    4, true),
                         new CAAT.Interpolator().createExponentialOutInterpolator(   4, true),
-                        new CAAT.Interpolator().createExponentialInOutInterpolator( 4, true),
+                        new CAAT.Interpolator().createExponentialInOutInterpolator( 4, true)
                     ],
                     [
                         new CAAT.Interpolator().createExponentialInInterpolator(    6, false),
@@ -247,7 +247,7 @@
 
                         new CAAT.Interpolator().createExponentialInInterpolator(    6, true),
                         new CAAT.Interpolator().createExponentialOutInterpolator(   6, true),
-                        new CAAT.Interpolator().createExponentialInOutInterpolator( 6, true),
+                        new CAAT.Interpolator().createExponentialInOutInterpolator( 6, true)
                     ]
                 ];
 
