Optimized technical demo scenes. Fixed accelerometer info. Works on Chrome perfectly. Added a 'security' dimension to correctly get text height when caching as bitmap. It is set to text height/4. Since there's no canvas context method to get text descent, for now this does it. Changed inheritance method. Now extend method is more proper and adds an implicit __super method for overriden class methods. Now instead of calling CAAT.DerivedClass.superclass.method.call(this,p1,p2,p3...) you can issue directly this.__super(p1,p2,...). Syntactic sugar worth it. Added new scene to thec demo: fishpond.

--- a/examples/demo/ha2d.html
+++ b/examples/demo/ha2d.html
@@ -62,7 +62,7 @@
 
 <script type="text/javascript" src="../../src/webgl/ShaderUtil.js"></script>
 <script type="text/javascript" src="../../src/webgl/glu.js"></script>
-<script type="text/javascript" src="../../src/webgl/gpTexturePage.js"></script>
+<script type="text/javascript" src="../../src/webgl/glTexturePage.js"></script>
 
 
 
@@ -84,7 +84,7 @@
 	stats.domElement.style.position = 'absolute';
 	stats.domElement.style.left = '0px';
 	stats.domElement.style.top = '0px';
-	//document.getElementById('container').appendChild(stats.domElement);
+	document.getElementById('container').appendChild(stats.domElement);
     setInterval( function () {
         stats.update();
     }, 1000 / 60 );
