Optimized technical demo scenes. Fixed accelerometer info. Works on Chrome perfectly. Added a 'security' dimension to correctly get text height when caching as bitmap. It is set to text height/4. Since there's no canvas context method to get text descent, for now this does it. Changed inheritance method. Now extend method is more proper and adds an implicit __super method for overriden class methods. Now instead of calling CAAT.DerivedClass.superclass.method.call(this,p1,p2,p3...) you can issue directly this.__super(p1,p2,...). Syntactic sugar worth it. Added new scene to thec demo: fishpond.

--- a/documentation/symbols/src/_Users_ibon_js_CAAT_src_CAAT.js.html
+++ b/documentation/symbols/src/_Users_ibon_js_CAAT_src_CAAT.js.html
@@ -56,4 +56,5 @@
 <span class='line'> 49</span> </span><span class="WHIT">        </span><span class="NAME">window.console.log</span><span class="PUNC">(</span><span class="WHIT"> </span><span class="NAME">Array.prototype.slice.call</span><span class="PUNC">(</span><span class="NAME">arguments</span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">)</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'> 50</span> </span><span class="WHIT">    </span><span class="PUNC">}</span><span class="WHIT">
 <span class='line'> 51</span> </span><span class="PUNC">}</span><span class="PUNC">;</span><span class="WHIT">
-<span class='line'> 52</span> </span></pre></body></html>
+<span class='line'> 52</span> 
+<span class='line'> 53</span> </span></pre></body></html>
