Updated examples/tutorials. Fixed transition bugs.

--- a/examples/demo/ha2d.html
+++ b/examples/demo/ha2d.html
@@ -10,44 +10,7 @@
 <div id="container"></div>
 </body>
 
-<script type="text/javascript" src="../../src/CAAT.js"></script>
-
-<script type="text/javascript" src="../../src/core/class.js"></script>
-<script type="text/javascript" src="../../src/core/browserdetect.js"></script>
-
-<script type="text/javascript" src="../../src/model/audio.js"></script>
-<script type="text/javascript" src="../../src/model/actor.js"></script>
-<script type="text/javascript" src="../../src/model/extraActor.js"></script>
-<script type="text/javascript" src="../../src/model/conpoundimage.js"></script>
-<script type="text/javascript" src="../../src/model/imagepreloader.js"></script>
-<script type="text/javascript" src="../../src/model/director.js"></script>
-<script type="text/javascript" src="../../src/model/mouseevent.js"></script>
-<script type="text/javascript" src="../../src/model/scene.js"></script>
-
-<script type="text/javascript" src="../../src/math/affinetransform2D.js"></script>
-<script type="text/javascript" src="../../src/math/point.js"></script>
-<script type="text/javascript" src="../../src/math/rectangle.js"></script>
-<script type="text/javascript" src="../../src/math/bezier.js"></script>
-<script type="text/javascript" src="../../src/math/color.js"></script>
-
-<script type="text/javascript" src="../../src/path/path.js"></script>
-<script type="text/javascript" src="../../src/path/pathactor.js"></script>
-<script type="text/javascript" src="../../src/path/interpolator.js"></script>
-<script type="text/javascript" src="../../src/path/interpolatoractor.js"></script>
-
-<script type="text/javascript" src="../../src/behaviour/behaviour.js"></script>
-
-<script type="text/javascript" src="../../src/modules/modules.js"></script>
-<script type="text/javascript" src="../../src/modules/LocalStorage/LocalStorage.js"></script>
-<script type="text/javascript" src="../../src/modules/CircleManager/PackedCircle.js"></script>
-<script type="text/javascript" src="../../src/modules/CircleManager/PackedCircleManager.js"></script>
-
-<script type="text/javascript" src="../../src/texture/plasma.js"></script>
-
-
-<script type="text/javascript" src="../../src/webgl/ShaderUtil.js"></script>
-<script type="text/javascript" src="../../src/webgl/glu.js"></script>
-<script type="text/javascript" src="../../src/webgl/glTexturePage.js"></script>
+<script type="text/javascript" src="../../build/caat.js"></script>
 
 
 <script type="text/javascript" src="scene1.js"></script>
@@ -62,9 +25,6 @@
 <script type="text/javascript" src="scene10.js"></script>
 <script type="text/javascript" src="scene11.js"></script>
 <script type="text/javascript" src="scene12.js"></script>
-<script type="text/javascript" src="sceneCSS-experimental.js"></script>
-
-
 <script type="text/javascript" src="main.js"></script>
 
 
